--- a/HackVSIT/login1.html
+++ b/HackVSIT/login1.html
@@ -31,12 +31,12 @@
                 </div>
                 <div class = 'navbar' id = 'nb'>
                     <ul>
+                        <li><a href = '#home'>Welcome User!!!</a>
                         <li><a href = '#home'>Home</a></li>
                         <li><a href = '#use'>Who should use</a></li>
                         <li><a href = '#features'>Features</a></li>
                         <li><a href = '#FAQs'>FAQ</a></li>
                         <li><a href = '#contact'>Contact</a></li>
-                        <li><a href = 'login.html'>Login</a></li>
                     </ul>
                 </div>
                 <div class = "use" id = "use" >
